[package]
name = "taskprinter"
version = "0.1.2"
edition = "2024"

[dependencies]
escpos = { version = "0.16.0", features = [] }
escpos-rs = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
